--- a/amplify/backend/auth/whatsontapadmina04b4c8b/whatsontapadmina04b4c8b-cloudformation-template.yml
+++ b/amplify/backend/auth/whatsontapadmina04b4c8b/whatsontapadmina04b4c8b-cloudformation-template.yml
@@ -83,9 +83,6 @@ Parameters:
   useDefault:
     Type: String
                       
-  usernameAttributes:
-    Type: CommaDelimitedList
-              
   dependsOn:
     Type: CommaDelimitedList
     
@@ -100,7 +97,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'whatsoa3e0e5b2_sns-role', !Join ['',['whatsoa3e0e5b2_sns-role', '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'whatsoa04b4c8b_sns-role', !Join ['',['whatsoa04b4c8b_sns-role', '-', !Ref env]]]
       AssumeRolePolicyDocument: 
         Version: "2012-10-17"
         Statement: 
@@ -112,10 +109,10 @@ Resources:
               - "sts:AssumeRole"
             Condition: 
               StringEquals:
-                sts:ExternalId: whatsoa3e0e5b2_role_external_id
+                sts:ExternalId: whatsoa04b4c8b_role_external_id
       Policies: 
         - 
-          PolicyName: whatsoa3e0e5b2-sns-policy
+          PolicyName: whatsoa04b4c8b-sns-policy
           PolicyDocument: 
             Version: "2012-10-17"
             Statement: 
@@ -156,14 +153,12 @@ Resources:
           RequireNumbers: false
           RequireSymbols: false
           RequireUppercase: false
-      
-      UsernameAttributes: !Ref usernameAttributes
           
       MfaConfiguration: !Ref mfaConfiguration
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration: 
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: whatsoa3e0e5b2_role_external_id
+        ExternalId: whatsoa04b4c8b_role_external_id
     
   
   UserPoolClientWeb:
@@ -171,7 +166,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: whatsoa3e0e5b2_app_clientWeb
+      ClientName: whatsoa04b4c8b_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -181,7 +176,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: whatsoa3e0e5b2_app_client
+      ClientName: whatsoa04b4c8b_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -246,7 +241,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: whatsoa3e0e5b2_userpoolclient_lambda_iam_policy
+      PolicyName: whatsoa04b4c8b_userpoolclient_lambda_iam_policy
       Roles: 
         - !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',[!Ref userpoolClientLambdaRole, '-', !Ref env]]]
       PolicyDocument:
@@ -263,7 +258,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: whatsoa3e0e5b2_userpoolclient_lambda_log_policy
+      PolicyName: whatsoa04b4c8b_userpoolclient_lambda_log_policy
       Roles: 
         - !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',[!Ref userpoolClientLambdaRole, '-', !Ref env]]]
       PolicyDocument:
@@ -303,7 +298,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties: 
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'whatsontapadmina3e0e5b2_identitypool_a3e0e5b2', !Join ['',['whatsontapadmina3e0e5b2_identitypool_a3e0e5b2', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'whatsontapadmina04b4c8b_identitypool_a04b4c8b', !Join ['',['whatsontapadmina04b4c8b_identitypool_a04b4c8b', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
