--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-file-reader": "^1.1.4",
     "react-google-autocomplete": "^1.1.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
